Added ZSF support for Timex TS2068


Improved ZX Spectrum Next emulation: added sprite rendering priority bit
Improved ZRCP: allow to change command prompt

Improved SmartLoad & Drag-Drop: 
-Allow to load a .rom file as a custom rom file for the current machine
-Allow to Drag-Drop when menu open

Improved ZX Desktop:
-Allow to extend ZX Desktop vertically
-Added frame around emulated machine

Improved HiLow DataDrive emulation:
-Allow to Format, Browse and Chkdsk an Hilow DataDrive image (.ddh file)
-Allow to convert audio from a real Hilow DataDrive tape to an image file (.ddh)
-Added technical documentation on the extras package


Fixed bug that may crash ZEsarUX when starting machine ZX Spectrum +2 Spanish. This is a bug that has always existed.
Fixed Z80 behavior after EI or DD/FD prefixes and interrupts
Fixed .Z80 Timex TS2068 snapshot loading
Fixed showing Recent Files when file name contains character %
Fixed HiLow DataDrive emulation
Fixed crash (stack smashing detected) when showing Debug CPU window (and compiled using -fstack-protector)
Fixed segfault when starting ZEsarUX + disabled welcome splash message + enabled reopen windows on start setting + no window to restore
Fixed trap print numbers on Spectrum and ZX81 (setting --chardetectcompatnum)


Some other minor bugfixes and improvements



Version 10.1 - Carrier Command edition. 06 May 2022

Added real joystick support on Mac
Added joystick support for Hat controllers
Added new joystick event to exit ZEsarUX
Added action to trigger left-right movement on joystick, to play Decathlon-like games
Added MSX Joystick emulation
Added Spectravideo Joystick emulation
Added support for simple speaker output on Raspberry PI Using GPIO pins and no sound card
Added setting to select a different joystick on Windows and OS with SDL driver
Added setting to change ULA Data bus value
Added showing microdrive label when expanding qlay mdv files of size 174930 bytes
Added Jupiter Ace TAP & TZX support on tape browser