@@ -9504,21 +9504,21 @@ void menu_zxdesktop_set_configurable_icons_choose(MENU_ITEM_PARAMETERS)
 
     int icono_seleccionado=valor_opcion;
 
-    int accion_seleccionada=zxdesktop_icons_list[icono_seleccionado].id_funcion;
+    int accion_seleccionada=zxdesktop_configurable_icons_list[icono_seleccionado].id_funcion;
 
     int indice_retorno=menu_zxdesktop_set_userdef_button_func_action(accion_seleccionada);
 
     if (indice_retorno>=0) {
         //printf("definimos boton. boton %d accion %d\n",item_seleccionado.valor_opcion,indice_retorno);
         int id_funcion=defined_direct_functions_array[indice_retorno].id_funcion;
-        zxdesktop_icons_list[icono_seleccionado].id_funcion=id_funcion;
+        zxdesktop_configurable_icons_list[icono_seleccionado].id_funcion=id_funcion;
 
 
         //temp
 
-        zxdesktop_icons_list[icono_seleccionado].exists=1;
-        zxdesktop_icons_list[icono_seleccionado].x=430;
-        zxdesktop_icons_list[icono_seleccionado].y=110;        
+        zxdesktop_configurable_icons_list[icono_seleccionado].exists=1;
+        zxdesktop_configurable_icons_list[icono_seleccionado].x=430;
+        zxdesktop_configurable_icons_list[icono_seleccionado].y=110;        
     }    
 
 /*
@@ -9555,12 +9555,12 @@ void menu_zxdesktop_set_configurable_icons(MENU_ITEM_PARAMETERS)
         char buffer_texto[40];
 
         int i;
-        for (i=0;i<MAX_ZXDESKTOP_ICONS;i++) {
+        for (i=0;i<MAX_ZXDESKTOP_CONFIGURABLE_ICONS;i++) {
 
             int indice_tabla=defined_buttons_functions_array[i];
 
             //tabulado todo a misma columna, agregamos un espacio con F entre 1 y 9
-            sprintf (buffer_texto,"Icon %d [%d]",i,zxdesktop_icons_list[i].id_funcion);
+            sprintf (buffer_texto,"Icon %d [%d]",i,zxdesktop_configurable_icons_list[i].id_funcion);
 
 
             //if (i==0) menu_add_item_menu_inicial_format(&array_menu_common,MENU_OPCION_NORMAL,NULL,NULL,buffer_texto);
