@@ -242,16 +242,16 @@ int defined_buttons_functions_array[MAX_USERDEF_BUTTONS]={
 };
 
 
-//Iconos presentes en el zx desktop
-zxdesktop_icon zxdesktop_icons_list[MAX_ZXDESKTOP_ICONS];
+//Iconos configurables por el usuario presentes en el zx desktop
+zxdesktop_configurable_icon zxdesktop_configurable_icons_list[MAX_ZXDESKTOP_CONFIGURABLE_ICONS];
 
 //Indicar todos los iconos como no presentes
 void init_zxdesktop_icons(void)
 {
     int i;
 
-    for (i=0;i<MAX_ZXDESKTOP_ICONS;i++) {
-        zxdesktop_icons_list[i].exists=0;
+    for (i=0;i<MAX_ZXDESKTOP_CONFIGURABLE_ICONS;i++) {
+        zxdesktop_configurable_icons_list[i].exists=0;
     }
     
     return;
@@ -260,15 +260,15 @@ void init_zxdesktop_icons(void)
     //60,10
     //80,20
 
-    zxdesktop_icons_list[0].exists=1;
-    zxdesktop_icons_list[0].x=430;
-    zxdesktop_icons_list[0].y=110;
-    zxdesktop_icons_list[0].id_funcion=F_FUNCION_WAVEFORM;
+    zxdesktop_configurable_icons_list[0].exists=1;
+    zxdesktop_configurable_icons_list[0].x=430;
+    zxdesktop_configurable_icons_list[0].y=110;
+    zxdesktop_configurable_icons_list[0].id_funcion=F_FUNCION_WAVEFORM;
 
-    zxdesktop_icons_list[1].exists=1;
-    zxdesktop_icons_list[1].x=460;
-    zxdesktop_icons_list[1].y=130;
-    zxdesktop_icons_list[1].id_funcion=F_FUNCION_SMARTLOAD;
+    zxdesktop_configurable_icons_list[1].exists=1;
+    zxdesktop_configurable_icons_list[1].x=460;
+    zxdesktop_configurable_icons_list[1].y=130;
+    zxdesktop_configurable_icons_list[1].id_funcion=F_FUNCION_SMARTLOAD;
 
 
 }
@@ -4459,8 +4459,8 @@ int menu_get_ext_desktop_icons_size(void)
 
 void menu_get_ext_desktop_icons_position(int index,int *p_x,int *p_y)
 {
-    int x=zxdesktop_icons_list[index].x;
-    int y=zxdesktop_icons_list[index].y;
+    int x=zxdesktop_configurable_icons_list[index].x;
+    int y=zxdesktop_configurable_icons_list[index].y;
 
     //Posicion considerando zoom
     x *=zoom_x;
@@ -4475,12 +4475,12 @@ void menu_draw_ext_desktop_icons(void)
 {
     int i;
 
-    for (i=0;i<MAX_ZXDESKTOP_ICONS;i++) {
-        if (zxdesktop_icons_list[i].exists) {
+    for (i=0;i<MAX_ZXDESKTOP_CONFIGURABLE_ICONS;i++) {
+        if (zxdesktop_configurable_icons_list[i].exists) {
             int x,y;
             menu_get_ext_desktop_icons_position(i,&x,&y);
 
-            char **bitmap=get_direct_function_icon_bitmap(zxdesktop_icons_list[i].id_funcion);
+            char **bitmap=get_direct_function_icon_bitmap(zxdesktop_configurable_icons_list[i].id_funcion);
             menu_draw_ext_desktop_one_icon(x,y,bitmap);
         }
     }
@@ -4492,8 +4492,8 @@ int if_position_in_desktop_icons(int posicion_x,int posicion_y)
     int tamanyo=menu_get_ext_desktop_icons_size();
 
     int i;
-    for (i=0;i<MAX_ZXDESKTOP_ICONS;i++) {
-        if (zxdesktop_icons_list[i].exists) {
+    for (i=0;i<MAX_ZXDESKTOP_CONFIGURABLE_ICONS;i++) {
+        if (zxdesktop_configurable_icons_list[i].exists) {
             int x,y;
             menu_get_ext_desktop_icons_position(i,&x,&y);
 
@@ -19238,12 +19238,12 @@ void menu_inicio_handle_configurable_icon_presses(void)
 
         printf("Mover icono hasta %d %d\n",mouse_pixel_x,mouse_pixel_y);
         //guardarlas sin zoom
-        zxdesktop_icons_list[pulsado_boton].x=mouse_pixel_x;
-        zxdesktop_icons_list[pulsado_boton].y=mouse_pixel_y;
+        zxdesktop_configurable_icons_list[pulsado_boton].x=mouse_pixel_x;
+        zxdesktop_configurable_icons_list[pulsado_boton].y=mouse_pixel_y;
     }   
 
     else {
-        int id_funcion=zxdesktop_icons_list[pulsado_boton].id_funcion;
+        int id_funcion=zxdesktop_configurable_icons_list[pulsado_boton].id_funcion;
 
         printf("Ejecutar funcion %d\n",id_funcion);
 
