@@ -12,6 +12,7 @@ Improved SmartLoad & Drag-Drop:
 -Allow to Drag-Drop when menu open
 
 Improved ZX Desktop:
+-Allow to add configurable icons
 -Allow to extend ZX Desktop vertically
 -Added frame around emulated machine
 
